Finish login/register and start on events

--- a/RestaurantRoulette/app/src/main/res/values/strings.xml
+++ b/RestaurantRoulette/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_account">AccountActivity</string>
+    <string name="title_activity_create_event">CreateEvent</string>
 </resources>
