--- a/RestaurantRoulette/app/src/main/res/values/strings.xml
+++ b/RestaurantRoulette/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">Restaurant Roulette</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_maps">MapsActivity</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="title_activity_register">RegisterActivity</string>
-    <string name="title_activity_account">AccountActivity</string>
-    <string name="title_activity_create_event">CreateEvent</string>
+    <string name="title_activity_maps">Events Map</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_register">Register</string>
+    <string name="title_activity_account">Account</string>
+    <string name="title_activity_create_event">Create Event</string>
+    <string name="title_activity_event_details">Event Details</string>
+    <string name="title_activity_my_events">My Events</string>
 </resources>
